--- a/lab2_2/app/src/main/res/values/strings.xml
+++ b/lab2_2/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">lab2_2</string>
+    <string name="add">+</string>
+    <string name="sub">-</string>
+    <string name="mul">*</string>
+    <string name="div">/</string>
 </resources>
